Fixed overflow issue, changed style on few places

--- a/HW3/ManageIssuesStyle.css
+++ b/HW3/ManageIssuesStyle.css
@@ -3,18 +3,24 @@
 			margin:0;
 			padding:0;
 			text-decoration: none;
-			font-family: Helvetica;
+			font-family: Times New Roman;
+		}
+		html{
+			position: relative;
+			min-height: 100%;
 		}
 		body{
 			width: 100%;
-  			min-height: 100vh;
+  			height:100%;
 			overflow: auto;
+			clear:both;
 			background-color: AliceBlue;
+			margin: 0 0 50px;
 		}
 		.site-header{
 			display: flex;
-			background-color:MidnightBlue;
-			color:Beige;
+			background-color:Black;
+			color:White;
 			overflow: hidden;
 			width:100%;
 			box-sizing:border-box;
@@ -48,7 +54,7 @@
 			color:DarkSlateGrey;
 		}
 		.site-header-2nd{
-			background: PaleTurquoise;
+			background: LightGrey;
 			height:100px;
 		}
 		.site-header-2nd-container{
@@ -62,7 +68,7 @@
 			margin-left:15%;
 		}
 		.site-header-2nd-container table td:hover{
-			background-color: AntiqueWhite;
+			background-color: DarkGrey;
 		}
 		.site-header-2nd-container table{
 			border-spacing: 0;
@@ -88,13 +94,13 @@
 			width:15%;
 		}
 		.site-header-2nd-container table td#dummyfirst:hover{
-			background-color: PaleTurquoise;
+			background-color: LightGrey;
 		}
 		.site-header-2nd-container table td#dummylast{
 			width:55%;
 		}
 		.site-header-2nd-container table td#dummylast:hover{
-			background-color: PaleTurquoise;
+			background-color: LightGrey;
 		}
 		.site-header-2nd-container table td.now{
 			background-color: AliceBlue;
@@ -111,10 +117,12 @@
 			height:auto;
 		}
 		.site-content{
+			overflow: auto;
 			margin-top: 10px;
 			width:60%;
 			float:left;
 			margin-right: auto;
+			margin-bottom: 50px;
 			height:auto;
 			padding:0px;
 		}
@@ -209,9 +217,9 @@
 			margin:5px;
 		}
 		footer{
-			position: fixed;
+			overflow: hidden;
+			position: absolute;
 			height:50px;
-			margin-top: auto;
 			bottom:0px;
 			margin-left:20%;
 			width:60%;
